// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with children 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  onPress={[Function]}
  style={
    Array [
      Object {
        "color": "#069",
        "textDecorationLine": "underline",
      },
      Object {},
    ]
  }
  url="http://thetimes.co.uk"
>
  The Times
</Text>
`;

exports[`renders correctly with specifc styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  onPress={[Function]}
  style={
    Array [
      Object {
        "color": "#069",
        "textDecorationLine": "underline",
      },
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
  url="http://thetimes.co.uk"
>
  The Times
</Text>
`;
